--- a/templates/addequipment.html
+++ b/templates/addequipment.html
@@ -1,5 +1,3 @@
-
-
 <br>
 <button type="button" class="btn btn-primary" ng-disabled="regEquip.$invalid || !equipCtrl.members[0]" ng-click='equipCtrl.addEquip()'>Добавить снарягу</button>
 <!-- <input type="submit" value="Дальше" ng-disabled="regEquip.$invalid || equipCtrl.isTimeOut() || equipCtrl.isDoubleEquip()" ng-click='equipCtrl.submit()' 
@@ -69,4 +67,16 @@ ng-show = 'equipCtrl.admin' ng-click='equipCtrl.submit(true)'> -->
 </div>
 
 <span ng-show='equipCtrl.isDoubleEquip()'>Одинаковая снаряга дважды на одном участнике!</span>
+<br>
+<br>
+
+<h1>Необходимое снаряжение для похода в горы</h1>
+<h2>Составляем список вещей в поход</h2>
+
+<p>На этой вкладке мы записываем все походные вещи, которые берутся для группы в целом. Например:  палатки, кастрюли, горелки, топорики, тенты, топливо, чайник, аптечка... 
+Можно вписывать даже легкий инвентарь вроде карты и компаса – смысл в том, чтобы ничего не забыть, но и не брать лишнего. </p>
+<p>Снаряжение для похода распределяем между участниками так, чтобы каждый что-то нес из общего веса. 
+Для этого пользуемся полями «берун» и «несун» (т.е. может быть так, что один берет, но несет кто-то другой). 
+Личные вещи в этот список не пишем, их общий вес в раскладке не учитывается. Только общая снаряга для похода!</p>
+
 
