--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,16 @@
 <div class='jumbotron'>
-<h1> Туристическая раскладка продуктов</h1>
-<h2> Расчет продуктов в поход</h2>
-<h3> Точная калькуляция, автоматическое распределение веса между туристами</h3>
-<p> Программа подсчитывает продукты в поход, пропорционально распределяет вес, подсчитывает расходы. Буквально за 5 минут можно получить на руки полный список необходимого снаряжения и продуктов. Останется только купить и не забыть взять в поход!</p>
-	
+<h1> Программа меню-раскладка продуктов в поход</h1>
+<h2> Что брать в поход?</h2>
+<p> Тем, кто планирует туристический поход на несколько дней,  
+программа меню-раскладка продуктов в поход значительно упростит подготовку. 
+Программа раскладка подскажет, какую еду брать в поход и поможет взять необходимое снаряжение для похода в горы. 
+Программа рассчитает общий вес продуктов и снаряжения и распределит его поровну между участниками. 
+На выходе каждый турист получит список вещей в поход и полный список еды, которую он должен купить. 
+Также программа меню-раскладка учитывает расходы каждого участника и сводит общий баланс. Очень удобно! Пользуйтесь!</p>	
 </div>
+
+
+
+
+
+
