--- a/templates/loadready.html
+++ b/templates/loadready.html
@@ -23,3 +23,10 @@
           ui-sref= "createNew({fromDB: 1})">Загрузить!
         </button>
 </form>
+
+<h1>Загрузка вашей походной раскладки</h1>
+<h2>(или скачать образец раскладки еды в походе на 6 человек)</h2>
+<p>Введи имя и пароль вашего похода и получи доступ к данным вашей раскладки питания и походного снаряжения. 
+Если нужен шаблон готовой раскладки на 6 человек и 3 ночевки - введи имя похода: "<b>Наш поход</b>" и пароль: "<b>раскладка</b>".
+Загрузится пример раскладки в поход на 6 человек - его можно отредактировать под параметры вашего похода и сохранить под другим именем, с другим паролем.
+Для этого нужно будет зарегиться: придумать логин и пароль админа вашего похода</p>
