--- a/templates/menuselect.html
+++ b/templates/menuselect.html
@@ -12,7 +12,7 @@
 <br>
 <br>
 <br>
-<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="collapse" data-target="#breakfasts"> Завтраки</button>
+<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="collapse" data-target="#breakfasts"> Походные завтраки</button>
 <br>
 <br>
 <div id="breakfasts" class="collapse container">
@@ -71,7 +71,7 @@
 </div>
 <br>
 <br>
-<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="collapse" data-target="#lunches"> Перекусы</button>
+<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="collapse" data-target="#lunches"> Походные перекусы</button>
 <br>
 <br>
 <div id="lunches" class="collapse container">
@@ -127,7 +127,7 @@
 </div>
 <br>
 <br>
-<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="collapse" data-target="#dinners"> Ужины</button>
+<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="collapse" data-target="#dinners"> Походные ужины</button>
 <br>
 <br>
 <div id="dinners" class="collapse container">
@@ -229,3 +229,12 @@
 </div>
 </div>
 <br>
+
+<br>
+<h1>Питание в походе: составляем меню в поход, делаем расчет продуктов на человека</h1>
+<h2>Что готовить в походе?</h2>
+<p>Как видите, программа уже предлагает вам определенный набор продуктов для приготовления завтрака, перекуса и ужина на каждый день похода. 
+Вы можете добавлять или удалять отдельные позиции походного меню. Важно ставить корректные цифры, чтобы получить точный расчет продуктов. 
+Для мужчин и женщин можно выставлять разные порционные нормы.</p>
+<p>Все, что вы планируете кушать вне рамок питания в походе, следует внести в список продуктов «Поезд»</p>
+
